--- a/page13.html
+++ b/page13.html
@@ -24,7 +24,7 @@
   
 </head>
 <body>
-<section id="menu-2b" data-rv-view="179">
+<section id="menu-2b" data-rv-view="232">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
         <div class="container">
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/b">web page creator</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-2d" data-rv-view="183" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.co/l">free bootstrap theme</a></section><section class="mbr-section article mbr-after-navbar" id="msg-box8-2d" data-rv-view="236" style="background-color: rgb(23, 64, 52); padding-top: 120px; padding-bottom: 40px;">
 
     
     <div class="container">
@@ -72,7 +72,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2e" data-rv-view="186" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2e" data-rv-view="239" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -82,7 +82,7 @@
 
 </section>
 
-<section class="mbr-section mbr-section__container" id="image2-2f" data-rv-view="188" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="mbr-section mbr-section__container" id="image2-2f" data-rv-view="241" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -99,7 +99,7 @@
     </div>
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2g" data-rv-view="190" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2g" data-rv-view="243" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -110,7 +110,7 @@
 
 </section>
 
-<section class="mbr-section article mbr-section__container" id="content1-2i" data-rv-view="192" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
+<section class="mbr-section article mbr-section__container" id="content1-2i" data-rv-view="245" style="background-color: rgb(255, 255, 255); padding-top: 20px; padding-bottom: 20px;">
 
     <div class="container">
         <div class="row">
@@ -121,7 +121,7 @@
 
 </section>
 
-<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2c" data-rv-view="181" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
+<footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-2c" data-rv-view="234" style="background-color: rgb(23, 64, 52); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
         <p>St. John's International School</p>
